Closed
Bug 1706998
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::dom::quota::QuotaManager::MaybeRecordShutdownStep]
Categories
(Core :: Storage: StorageManager, defect, P2)
Tracking
()
RESOLVED
FIXED
90 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox87 | --- | wontfix |
| firefox88 | --- | wontfix |
| firefox89 | --- | wontfix |
| firefox90 | --- | fixed |
People
(Reporter: aryx, Assigned: jstutte)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
95% of crashes on Windows 10, the other ones Windows except 4 macOS crashes
Crash report: https://crash-stats.mozilla.org/report/index/44db734f-9de4-4b7a-9971-d0f420210422
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::dom::quota::QuotaManager::MaybeRecordShutdownStep dom/quota/ActorsParent.cpp:3655
1 xul.dll static mozilla::dom::cache::Manager::Factory::Remove dom/cache/Manager.cpp:274
2 xul.dll mozilla::dom::cache::Context::~Context dom/cache/Context.cpp:920
3 xul.dll mozilla::SafeRefPtr<mozilla::dom::cache::Context>::assign_assuming_AddRef dom/indexedDB/SafeRefPtr.h:172
4 xul.dll mozilla::dom::cache::Context::ActionRunnable::Clear dom/cache/Context.cpp:572
5 xul.dll mozilla::dom::cache::Context::ActionRunnable::Run dom/cache/Context.cpp:686
6 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1145
7 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:332
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:328
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:310
| Assignee | ||
Comment 1•5 years ago
|
||
It seems that the IPDL Background thread is processing events even after that the RecvShutdownQuotaManager has been processed, which nulled out the gInstance.
Before using quota::QuotaManager::GetRef() we should probably check IsShuttingDown() (or have static wrapper functions that do this for us).
Severity: -- → S3
Priority: -- → P2
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(jvarga)
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → jstutte
Status: NEW → ASSIGNED
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(jvarga)
Updated•5 years ago
|
Attachment #9223558 -
Attachment description: Bug 1706998: Replace QuotaManager::GetRef().MaybeRecordShutdownStep by static QuotaManager::MaybeRecordQuotaClientShutdownStep with gInstance check; r=#dom-storage → Bug 1706998: Replace QuotaManager::GetRef().MaybeRecordShutdownStep by static QuotaManager::(Safe)MaybeRecordQuotaClientShutdownStep; r=#dom-storage
Pushed by jstutte@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c8a45415dc5b
Replace QuotaManager::GetRef().MaybeRecordShutdownStep by static QuotaManager::(Safe)MaybeRecordQuotaClientShutdownStep; r=dom-storage-reviewers,janv
Comment 4•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Updated•5 years ago
|
Keywords: regression
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•